# DobbyVPN

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .lefthook.yml  .trivyignore  AGENTS.MD  AGENTS.md  CHANGELOG.md  Gemfile  IOS26_FIX_SUMMARY.md  Privacy_Policy.md  README.md  Taskfile.yml  go.mod  sonar-project.properties
docs/: Support.md  (+2 more)
go_client/: .golangci.yml  CMakeLists.txt  README.md  SERVICES.md  go.mod  go.sum  how_to.md  integration_test.go  liboutline.h  main.go  outline_jni.cpp  output.txt  vpnserver.proto
go_client/awg/: client.go  client_android.go  client_android_linux.go  client_apple.go  client_desktop.go  client_ios.go  client_test.go  config.go  desktop_driver.go  driver.go  mobile_driver.go  tun_android.go  tun_ios.go
go_client/awg/config/: config.go  key.go
go_client/awg/internal/: addressconfig_windows.go  app.go  app_darwin.go  app_linux.go  app_unix.go  app_windows.go  config.go  defaultroutemonitor.go  interfacewatcher.go  name.go  parse.go  writer.go
go_client/awg/subnet/: addressconfig_windows.go  common.go  defaultroutemonitor.go  interfacewatcher.go  subnet_darwin.go  subnet_linux.go  subnet_windows.go
go_client/awg/tunnel/: addressconfig_windows.go  common.go  deterministicguid.go  interfacewatcher.go  tun_linux.go  tun_windows.go
go_client/cloak/: client.go  cloakConfigMapper.go  cloak_config_functional_test.go  routing_android.go  routing_linux.go  routing_macos.go  routing_mobile.go  routing_windows.go  transport_config_functional_test.go
go_client/common/: client.go  client_test.go  tunnel.go
go_client/desktop_exports/: awg.go  cloak.go  grpc.go  health_check.go  logger.go  main.go  outline.go  trusttunnel.go  unix_execute.go  windows_execute.go  xray.go
go_client/desktop_exports/api/: awg.go  cloak.go  drivers.go  georouting.go  health_check.go  logger.go  outline.go
go_client/desktop_exports/executor/: common.go  unix_execute.go  windows_execute.go
go_client/desktop_exports/proto/: awg.go  cloak.go  drivers.go  georouting.go  grpc.go  health_check.go  logger.go  outline.go
go_client/direct/: direct_tcp.go
go_client/drivers/: tap_device_unix.go  tap_device_windows.go
go_client/e2e/: README.md  cloak_negative_e2e_test.go  docker-compose.e2e.yml  e2e_tag_guard_test.go  go_e2e_test.go
go_client/geo/: geo.go
go_client/georouting/: default_cidrs.go  default_router.go  engine.go  iptrie.go
go_client/grpcproto/: vpnserver.pb.go  vpnserver.proto  vpnserver_grpc.pb.go
go_client/healthcheck/: address_port_check.go  health_check.go  health_check_reconnect_e2e_test.go  healthcheck_functional_test.go  tcp_ping.go  urlTest.go
go_client/ios_exports/: awg.go  boundary_contract_functional_test.go  cloak.go  georouting.go  guard.go  health_check.go  logger.go  outline.go  outline_packet_proxy.go  sockets.go  trusttunnel.go  xray.go
go_client/kotlin_exports/: awg.go  boundary_contract_functional_test.go  cloak.go  exitfunc_android.go  georouting.go  health_check.go  logger.go  outline.go  outline_device.go  outline_packet_proxy.go  sockets.go  trusttunnel.go  xray.go
go_client/log/: logger.go
go_client/logger/: log_android.go  log_ios.go  logger.go
go_client/outline/: client.go  client_desktop.go  client_mobile.go  client_test.go  desktop_driver.go  driver.go  mobile_driver.go  outlineConfigMapper.go
go_client/route/: linux.go  macos.go  windows.go
go_client/routing/: routing.go  routing_linux.go  routing_macos.go  routing_windows.go
go_client/services/: awg_windows.go
go_client/trusttunnel/: bridge.c  client_desktop.go  client_mobile.go  manager_desktop.go  manager_mobile.go
go_client/tun/: tun_device_linux.go  tun_device_macos.go  tun_device_windows.go
go_client/tunnel/: direct_tcp.go  georouting.go  packet_meta.go  protect_darwin.go  protect_linux.go  protect_windows.go  transfer_options.go  tunnel.go  tunnel_android.go  tunnel_ios.go
go_client/vpnserver/: vpnserver.pb.go  vpnserver_grpc.pb.go
go_client/xray/: client_desktop.go  client_mobile.go
(+894 files in other folders)
